--- a/app/views/bookmarks/_personal_row.html.erb
+++ b/app/views/bookmarks/_personal_row.html.erb
@@ -26,7 +26,7 @@
 
     <!-- Type -->
     <div class="mt-1 text-xs text-gray-600 font-medium text-center">
-      <%= bookmarkable.object.class.name.upcase %>
+      <%= bookmarkable.object.class.name.titleize.upcase %>
     </div>
   </div>
 
