--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -7,7 +7,7 @@
 
   <!-- 📌 Bookmark -->
   <div class="absolute top-3 right-3 z-20">
-    <%= render "bookmarks/editable_bookmark_icon", resource: event %>
+    <%= render "bookmarks/editable_bookmark_icon", resource: event.object %>
   </div>
 
   <!-- 1️⃣ Thumbnail + Title Row -->
