--- a/app/views/dashboard/_event.html.erb
+++ b/app/views/dashboard/_event.html.erb
@@ -1,7 +1,7 @@
 <div class="relative">
   <!-- Bookmark is OUTSIDE the link, but visually on top -->
   <div class="absolute top-3 right-3 z-30">
-    <%= render "bookmarks/editable_bookmark_icon", resource: event %>
+    <%= render "bookmarks/editable_bookmark_icon", resource: event.object %>
   </div>
 
   <!-- Entire card is clickable -->
